--- a/src/grid.css
+++ b/src/grid.css
@@ -1,6 +1,15 @@
+.date-picker {
+  --font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
+    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-family: var(--font);
+  padding: 16px 24px;
+  box-shadow: 0 4px 13px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+}
+
 .date-picker__weekdays,
 .date-picker__grid {
-  --gap: 10px;
+  --gap: 8px 16px;
   display: grid;
   grid-gap: var(--gap);
   grid-template-columns: repeat(7, 1fr);
@@ -10,7 +19,10 @@
 .date-picker__weekdays {
   align-items: center;
   justify-items: center;
-  margin-bottom: var(--gap);
+  margin-top: 16px;
+  margin-bottom: 16px;
+  padding: 2px 0;
+  color: rgba(0, 0, 0, 0.5);
 }
 
 .date-picker__grid button:first-child {
@@ -31,9 +43,11 @@
   /* Custom styles */
   display: flex;
   background: white;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   align-items: center;
   justify-content: center;
+  width: 32px;
+  height: 32px;
   /*
   background-image: linear-gradient(
     45deg,
@@ -41,6 +55,8 @@
     rgba(0, 0, 0, 0.5) 50%
   );
   */
+  border-radius: 99px;
+  cursor: pointer;
 }
 
 .date-picker__grid__item::before {
@@ -67,5 +83,5 @@
 }
 
 .date-picker__grid__item--selected {
-  background: lightblue;
+  /* background: lightblue; */
 }
