--- a/src/month.css
+++ b/src/month.css
@@ -1,8 +1,9 @@
 .date-picker__month {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 
-  margin: 30px 0;
+  margin: 0 -8px 16px;
 }
 
 .date-picker__month button {
@@ -14,6 +15,9 @@
   overflow: visible;
   border: initial;
   -webkit-appearance: none;
+
+  padding: 8px;
+  cursor: pointer;
 }
 
 .date-picker__month button img,
