--- a/stories/stories.css
+++ b/stories/stories.css
@@ -1,3 +1,37 @@
 body {
   color: white;
 }
+
+.story-input {
+  border: 1px solid gray;
+  padding: 10px 13px;
+  background: black;
+  display: flex;
+  width: 120px;
+  border-radius: 6px;
+}
+
+.story-input svg {
+  width: 20px;
+  margin-top: -1px;
+}
+
+.story-input svg path {
+  stroke: gray;
+}
+
+.story-input input {
+  background: black;
+  border: 0;
+  width: 100%;
+  font-size: 16px;
+  color: white;
+  padding-left: 13px;
+}
+
+.story-input:hover {
+}
+
+.story-input input:focus {
+  outline: 0;
+}
