--- a/stories/stories.css
+++ b/stories/stories.css
@@ -1,5 +1,9 @@
 body {
   color: white;
+  --font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
+    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-family: var(--font);
+  color: #eee;
 }
 
 .story-input {
